Notification fix